2012-09-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* feedsource.glade, preferences.glade: Added interfaces for
	  multi-account support.

2012-09-04  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* theme.py, twitter/output.py, twitter/tweetentry.py:
	  Added new templates: retweet.html and protected.html.
	  Added substitution keywords (retweet_by_screen_name,
	  title_by_name & title_by_screen_name).

2012-08-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.6.2 release.

2012-08-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* po/ja.po: Fixed a mistranslation.

2012-08-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* share/gfeedline.indicator: Added a shortcut icon on Ubuntu
	  Message Indicator.

2012-08-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* share/html/theme/RTL/: Added new RTL theme (issue #5).
	* twitter/tweetentry.py, twitter/output.py: Fixed a bug that
	prevents showing Direct Messages. (issue #7) Added new
	DirectMessageEntry class.

2012-08-02  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* po/de_DE.po: Added new German translation.  Thanks t_bb_!

2012-07-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* po/ar.po: Added new Arabic translation.  Thanks Humaidan Mohammed!

2012-07-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.6.1 release.

2012-07-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* po/pt.po: Added new Portuguese translation.  Thanks Valter Asensio!

2012-07-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/tweetentry.py: Fixed an escapeing problem of client info
	  links.  Improved a regular expression for Japanese hash tag.

2012-07-04  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* es_ES.po: Updated Spanish translation.  Thanks Adolfo Jayme
	  Barrientos!
	* twitter/tweetentry.py (AddedHtmlMarkup.convert): Fixed character
	  escaping problems.

2012-06-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/api.py (TwitterAPIListTimeLine.get_options): Added
	  checking for list names. Thanks @Adan2JP!
